Fix: "main section overflow"

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -10,6 +10,7 @@ main {
     color: var(--main-font-color);
     max-width: var(--max-width);
     margin: auto;
+    overflow: hidden;
 }
 
 a {
